@@ -42,13 +42,13 @@ import io.trino.sql.tree.Expression;
 import io.trino.sql.tree.Identifier;
 import io.trino.sql.tree.NodeRef;
 import io.trino.sql.tree.Parameter;
+import io.trino.sql.tree.Resolver;
 
 import java.util.List;
 import java.util.Map;
 
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.collect.ImmutableMap.toImmutableMap;
-import static com.google.common.collect.Iterables.getLast;
 import static com.google.common.collect.Iterables.getOnlyElement;
 import static com.google.common.util.concurrent.Futures.immediateVoidFuture;
 import static io.trino.execution.ParameterExtractor.bindParameters;
@@ -65,8 +65,8 @@ import static io.trino.spi.connector.ConnectorCapabilities.NOT_NULL_COLUMN_CONST
 import static io.trino.sql.analyzer.ExpressionAnalyzer.analyzeDefaultColumnValue;
 import static io.trino.sql.analyzer.SemanticExceptions.semanticException;
 import static io.trino.sql.analyzer.TypeSignatureTranslator.toTypeSignature;
+import static io.trino.sql.tree.IdentifierKind.COLUMN;
 import static io.trino.type.UnknownType.UNKNOWN;
-import static java.util.Locale.ENGLISH;
 import static java.util.Objects.requireNonNull;
 import static java.util.function.Function.identity;
 
@@ -99,8 +99,10 @@ public class AddColumnTask
             WarningCollector warningCollector)
     {
         Session session = stateMachine.getSession();
+        QualifiedObjectName originalTableName = createQualifiedObjectName(session, statement, statement.getName(), plannerContext.getMetadata());
+        Resolver resolver = plannerContext.getMetadata().getResolverManager().getResolver(session, originalTableName.catalogName());
+
         Map<NodeRef<Parameter>, Expression> parameterLookup = bindParameters(statement, parameters);
-        QualifiedObjectName originalTableName = createQualifiedObjectName(session, statement, statement.getName());
         RedirectionAwareTableHandle redirectionAwareTableHandle = plannerContext.getMetadata().getRedirectionAwareTableHandle(session, originalTableName);
         if (redirectionAwareTableHandle.tableHandle().isEmpty()) {
             if (!statement.isTableExists()) {
@@ -115,10 +117,10 @@ public class AddColumnTask
 
         TableMetadata tableMetadata = plannerContext.getMetadata().getTableMetadata(session, tableHandle);
         Map<String, ColumnMetadata> columns = tableMetadata.columns().stream()
-                .collect(toImmutableMap(ColumnMetadata::getName, identity()));
+                .collect(toImmutableMap(metadata -> resolver.compare(metadata.getName(), COLUMN), identity()));
 
         ColumnDefinition element = statement.getColumn();
-        Identifier columnName = element.getName().getOriginalParts().get(0);
+        String columnName = resolver.canonicalize(element.getName().getOriginalParts().getFirst());
         ColumnPosition position = statement.getPosition().orElse(new ColumnPosition.Last());
         Type type;
         try {
@@ -134,7 +136,7 @@ public class AddColumnTask
             if (type.equals(UNKNOWN)) {
                 throw semanticException(COLUMN_TYPE_UNKNOWN, element, "Unknown type '%s' for column '%s'", element.getType(), columnName);
             }
-            if (columns.containsKey(columnName.getValue().toLowerCase(ENGLISH))) {
+            if (columns.containsKey(resolver.compare(columnName, COLUMN))) {
                 if (!statement.isColumnNotExists()) {
                     throw semanticException(COLUMN_ALREADY_EXISTS, statement, "Column '%s' already exists", columnName);
                 }
@@ -146,8 +148,11 @@ public class AddColumnTask
             if (!element.isNullable() && !plannerContext.getMetadata().getConnectorCapabilities(session, catalogHandle).contains(NOT_NULL_COLUMN_CONSTRAINT)) {
                 throw semanticException(NOT_SUPPORTED, element, "Catalog '%s' does not support NOT NULL for column '%s'", catalogHandle, columnName);
             }
-            if (position instanceof ColumnPosition.After after && !columns.containsKey(after.column().getValue().toLowerCase(ENGLISH))) {
-                throw semanticException(COLUMN_NOT_FOUND, statement, "Column '%s' does not", after.column().getValue());
+            if (position instanceof ColumnPosition.After(Identifier after)) {
+                String afterColumn = resolver.canonicalize(after);
+                if (!columns.containsKey(resolver.compare(afterColumn, COLUMN))) {
+                    throw semanticException(COLUMN_NOT_FOUND, statement, "Column '%s' does not exist", after.getValue());
+                }
             }
 
             Map<String, Object> columnProperties = columnPropertyManager.getProperties(
@@ -163,7 +168,7 @@ public class AddColumnTask
             Type supportedType = getSupportedType(session, catalogHandle, tableMetadata.metadata().getProperties(), type);
             element.getDefaultValue().ifPresent(value -> analyzeDefaultColumnValue(session, plannerContext, accessControl, parameterLookup, warningCollector, supportedType, value));
             ColumnMetadata column = ColumnMetadata.builder()
-                    .setName(columnName.getValue())
+                    .setName(columnName)
                     .setType(supportedType)
                     .setDefaultValue(element.getDefaultValue().map(Expression::toString))
                     .setNullable(element.isNullable())
@@ -176,12 +181,12 @@ public class AddColumnTask
                     tableHandle,
                     qualifiedTableName.asCatalogSchemaTableName(),
                     column,
-                    toConnectorColumnPosition(position));
+                    toConnectorColumnPosition(position, resolver));
         }
         else {
             accessControl.checkCanAlterColumn(session.toSecurityContext(), qualifiedTableName);
 
-            if (!columns.containsKey(columnName.getValue().toLowerCase(ENGLISH))) {
+            if (!columns.containsKey(resolver.compare(columnName, COLUMN))) {
                 throw semanticException(COLUMN_NOT_FOUND, statement, "Column '%s' does not exist", columnName);
             }
             if (!(position instanceof ColumnPosition.Last)) {
@@ -190,13 +195,13 @@ public class AddColumnTask
             }
 
             List<String> parentPath = statement.getColumn().getName().getOriginalParts().subList(0, statement.getColumn().getName().getOriginalParts().size() - 1).stream()
-                    .map(identifier -> identifier.getValue().toLowerCase(ENGLISH))
+                    .map(resolver::canonicalize)
                     .collect(toImmutableList());
             List<String> fieldPath = statement.getColumn().getName().getOriginalParts().subList(1, statement.getColumn().getName().getOriginalParts().size()).stream()
-                    .map(Identifier::getValue)
+                    .map(resolver::canonicalize)
                     .collect(toImmutableList());
 
-            ColumnMetadata columnMetadata = columns.get(columnName.getValue().toLowerCase(ENGLISH));
+            ColumnMetadata columnMetadata = columns.get(resolver.compare(columnName, COLUMN));
             Type currentType = columnMetadata.getType();
             for (int i = 0; i < fieldPath.size() - 1; i++) {
                 String fieldName = fieldPath.get(i);
@@ -215,7 +220,7 @@ public class AddColumnTask
                 throw new TrinoException(NOT_SUPPORTED, "Unsupported type: " + currentType);
             }
 
-            String fieldName = getLast(statement.getColumn().getName().getParts());
+            String fieldName = resolver.canonicalize(statement.getColumn().getName().getOriginalParts().getLast());
             List<RowType.Field> candidates = getCandidates(currentType, fieldName);
 
             if (!candidates.isEmpty()) {
@@ -239,7 +244,8 @@ public class AddColumnTask
     private static List<RowType.Field> getCandidates(Type type, String fieldName)
     {
         if (type instanceof ArrayType arrayType) {
-            if (!fieldName.equals("element")) {
+            // FIXME: fieldName must be compared case insensitive.
+            if (!fieldName.equalsIgnoreCase("element")) {
                 throw new TrinoException(NOT_SUPPORTED, "ARRAY type should be denoted by 'element' in the path; found '%s'".formatted(fieldName));
             }
             // return nameless Field to denote unwrapping of container
@@ -263,11 +269,11 @@ public class AddColumnTask
                 .orElse(type);
     }
 
-    private static io.trino.spi.connector.ColumnPosition toConnectorColumnPosition(ColumnPosition columnPosition)
+    private static io.trino.spi.connector.ColumnPosition toConnectorColumnPosition(ColumnPosition columnPosition, Resolver resolver)
     {
         return switch (columnPosition) {
             case ColumnPosition.First _ -> new First();
-            case ColumnPosition.After after -> new After(after.column().getValue().toLowerCase(ENGLISH));
+            case ColumnPosition.After after -> new After(resolver.canonicalize(after.column()));
             case ColumnPosition.Last _ -> new Last();
         };
     }
